# SpaceSomething

./: CMakeLists.txt  README.md
data/: CMakeLists.txt
src/: CMakeLists.txt  Game.cpp  Game.h  GameResources.cpp  GameResources.h  stringutils.h
src/objects/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  GameSprite.h  Player.cpp  Player.h
